[package]
name = "MultiChainor"
version = "0.1.0"
edition = "2024"

[dependencies]
alloy = { version = "1.0.22", features = ["full"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.141"
tokio = { version = "1.46.1", features = ["full"] }
ureq = { version = "3.0.12", features = ["json"] }

[dev-dependencies]
dotenv = "0.15.0"
